Bleep. Bloop. I am a bot.

--- a/Machine-files.html
+++ b/Machine-files.html
@@ -381,6 +381,8 @@ Supported values are <code>always</code>, <code>never</code>, <code>dep_only</co
 <code>exe_wrapper</code> specified in <code>[binaries]</code> to run generated executables in CMake
 subprojects. This setting has no effect if the <code>exe_wrapper</code> was not specified.
 The default value is <code>true</code>. (<em>new in 0.56.0</em>)</li>
+<li>
+<code>java_home</code> is an absolute path pointing to the root of a Java installation.</li>
 </ul>
 <h3 id="cmake-variables">CMake variables</h3>
 <p><em>New in 0.56.0</em></p>
