--- a/Syntax.html
+++ b/Syntax.html
@@ -253,6 +253,11 @@ string_var = int_var.to_string()
 <p>A boolean is either <code>true</code> or <code>false</code>.</p>
 <pre><code class="language-meson">truth = true
 </code></pre>
+<p>Booleans can be converted to a string or to a number:</p>
+<pre><code class="language-meson">bool_var = true
+string_var = bool_var.to_string()
+int_var = bool_var.to_int()
+</code></pre>
 <h2 id="strings">Strings</h2>
 <p>Strings in Meson are declared with single quotes. To enter a literal
 single quote do it like this:</p>
