--- a/Users.html
+++ b/Users.html
@@ -448,6 +448,8 @@ format files</li>
 <li>
 <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a>, a command-line cloud music player for Linux with support for Spotify, Google Play Music, YouTube, SoundCloud, TuneIn, Plex servers and Chromecast devices</li>
 <li>
+<a href="https://github.com/mateus558/UFJF-Machine-Learning-Toolkit">UFJF-MLTK</a>, A C++ cross-platform framework for machine learning algorithms development and testing</li>
+<li>
 <a href="https://github.com/benwaffle/vala-language-server">Vala Language Server</a>, code intelligence engine for the Vala and Genie programming languages</li>
 <li>
 <a href="https://github.com/valum-framework/valum">Valum</a>, a micro web framework written in Vala</li>
