Bleep. Bloop. I am a bot.

--- a/index.html
+++ b/index.html
@@ -217,10 +217,11 @@ code.</p>
 read <a href="SimpleStart.html">this beginner guide</a> to get started.</p>
 <h2 id="community">Community</h2>
 <p>There are two main methods of connecting with other Meson
-developers. The first one is the mailing list, which is hosted at
+developers. The easiest way for most people is a web chat. The channel
+to use is <code>#mesonbuild</code> either via Matrix (<a href="https://element.io">web
+interface</a>) or <a href="https://www.oftc.net/">OFTC IRC</a>.</p>
+<p>The second one is the mailing list, which is hosted at
 <a href="https://groups.google.com/forum/#!forum/mesonbuild">Google Groups</a>.</p>
-<p>The second way is via IRC. The channel to use is <code>#mesonbuild</code> at
-<a href="https://freenode.net/">Freenode</a>.</p>
 <h3 id="projects-using-meson"><a href="Users.html">Projects using Meson</a></h3>
 <p>Many projects are using Meson and they're
 a great resource for learning what to (and what not to!) do when
