--- a/Pkgconfig-module.html
+++ b/Pkgconfig-module.html
@@ -259,17 +259,24 @@ reference other pkgconfig variables,
 e.g. <code>datadir=${prefix}/share</code>. The names <code>prefix</code>, <code>libdir</code> and
 <code>includedir</code> are reserved and may not be used. <em>Since 0.56.0</em> it can also be a
 dictionary but ordering of Meson dictionaries are not guaranteed, which could
-cause issues when some variables reference other variables.</li>
+cause issues when some variables reference other variables.
+Spaces in values are escaped with <code>\</code>, this is required in the case the value is
+a path that and is used in <code>cflags</code> or <code>libs</code> arguments. <em>Since 0.59.0</em> if
+escaping is not desired (e.g. space separate list of values) <code>unescaped_variables</code>
+keyword argument should be used instead.</li>
+<li>
+<code>uninstalled_variables</code> used instead of the <code>variables</code> keyword argument, when
+generating the uninstalled pkg-config file. Since <em>0.54.0</em>
+Spaces in values are escaped with <code>\</code>, this is required in the case the value is
+a path that and is used in <code>cflags</code> or <code>libs</code> arguments. <em>Since 0.59.0</em> if
+escaping is not desired (e.g. space separate list of values)
+<code>unescaped_uninstalled_variables</code> keyword argument should be used instead.</li>
 <li>
 <code>version</code> a string describing the version of this library, used to set the
 <code>Version:</code> field. (<em>since 0.46.0</em>) Defaults to the project version if unspecified.</li>
 <li>
 <code>d_module_versions</code> a list of module version flags used when compiling
 D sources referred to by this pkg-config file</li>
-<li>
-<code>uninstalled_variables</code> used instead of the <code>variables</code> keyword argument, when
-generating the uninstalled pkg-config file. Since <em>0.54.0</em>
-</li>
 <li>
 <code>dataonly</code> field. (<em>since 0.54.0</em>) this is used for architecture-independent
 pkg-config files in projects which also have architecture-dependent outputs.</li>
