--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -495,6 +495,10 @@ set in the cross file.</p>
 <td> 32 bit C2000 processor</td>
 </tr>
 <tr>
+<td> csky</td>
+<td> 32 bit CSky processor</td>
+</tr>
+<tr>
 <td> dspic</td>
 <td> 16 bit Microchip dsPIC</td>
 </tr>
