--- a/Quick-guide.html
+++ b/Quick-guide.html
@@ -235,18 +235,21 @@ and standard use.</p>
 <p><em>Ninja is only needed if you use the Ninja backend. Meson can also
 generate native VS and Xcode project files.</em></p>
 <h2 id="installation-using-package-manager">Installation using package manager</h2>
-<p>Ubuntu:</p>
-<pre><code class="language-console">$ sudo apt-get install python3 python3-pip python3-setuptools \
-                       python3-wheel ninja-build
+<p>Debian or Ubuntu:</p>
+<pre><code class="language-console">$ sudo apt-get install python3 ninja-build meson
 </code></pre>
 <p><em>Due to our frequent release cycle and development speed, distro packaged software may quickly become outdated.</em></p>
 <h2 id="installation-using-python">Installation using Python</h2>
 <p>Requirements: <strong>pip3</strong></p>
-<p>The best way to receive the most up-to-date version of Mesonbuild.</p>
-<p>Install as a local user (recommended):</p>
+<p>This is the best way to receive the most up-to-date version of Mesonbuild.</p>
+<p>First, install dependencies using the package manager:</p>
+<pre><code class="language-console">$ sudo apt-get install python3 python3-pip python3-setuptools \
+                       python3-wheel ninja-build
+</code></pre>
+<p>Then, install meson as a local user (recommended):</p>
 <pre><code class="language-console">$ pip3 install --user meson
 </code></pre>
-<p>Install as root:</p>
+<p>Or, install meson as root:</p>
 <pre><code class="language-console"># pip3 install meson
 </code></pre>
 <p><em>If you are unsure whether to install as root or a local user, install
